--- a/02_assignments/assignment_3.ipynb
+++ b/02_assignments/assignment_3.ipynb
@@ -13,15 +13,11 @@
    "id": "5fce0350-2a17-4e93-8d4c-0b8748fdfc32",
    "metadata": {},
    "source": [
-    "This assignment should be completed in Python, and an PDF file should be submitted, containing both code and written answers. If you like, you may create your own Jupyter Notebook file from scratch, but it is likely easier to modify this one.\n",
-    "\n",
     "As before, questions that require identification and/or interpretation will not penalized for brevity of response: if a question can be answered with 'yes/no', or a numeric value, you may simply state as much. If you incorporate code from the internet (which is not required and generally not advisable), please cite the source within your code (providing a URL is sufficient).\n",
     "\n",
     "We will go through comparable code and concepts in class. If you run into trouble, start by using the help `help()` function in Python, to get information about the datasets and function in question. The internet is also a great resource when coding (though note that no outside searches are required by the assignment!). If you do incorporate code from the internet, please cite the source within your code (providing a URL is sufficient).\n",
     "\n",
-    "Please bring questions that you cannot work out on your own to tutorial. We will work with you through the issue.\n",
-    "\n",
-    "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked at the top of your PDF. Separate submissions are required."
+    "Please bring questions that you cannot work out on your own to tutorial. We will work with you through the issue."
    ]
   },
   {
@@ -261,6 +257,37 @@
     "|Criteria            |Pass           |Fail          |\n",
     "|--------------------|---------------|--------------|\n",
     "|Bootstrapping|All steps are done correctly and the answers are correct.|At least one step is done incorrectly leading to a wrong answer.|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b8a226",
+   "metadata": {},
+   "source": [
+    "## Submission Information\n",
+    "\n",
+    "Please review our [Assignment Submission Guide](https://github.com/UofT-DSI/onboarding/blob/main/onboarding_documents/submissions.md) for detailed instructions on how to format, branch, and submit your work. Following these guidelines is crucial for your submissions to be evaluated correctly.\n",
+    "\n",
+    "### Note:\n",
+    "\n",
+    "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked with in your pull request by tagging their GitHub username. Separate submissions are required.\n",
+    "\n",
+    "\n",
+    "### Submission Parameters:\n",
+    "* Submission Due Date: `HH:MM AM/PM - DD/MM/YYYY`\n",
+    "* The branch name for your repo should be: `assignment-3`\n",
+    "* What to submit for this assignment:\n",
+    "    * This Jupyter Notebook (assignment_3.ipynb) should be populated and should be the only change in your pull request.\n",
+    "* How the pull request link should look like for this assignment: `https://github.com/<your_github_username>/applied_statistical_concepts/pull/<pr_id>`\n",
+    "    * Please verify that this link format is correctly implemented and accessible in a private browser session. This ensures that the technical facilitator and learning support staff can access your submission without any issues.\n",
+    "\n",
+    "Checklist:\n",
+    "- [ ] Created a branch with the correct naming convention.\n",
+    "- [ ] Ensured that the repository is public.\n",
+    "- [ ] Reviewed the PR description guidelines and adhered to them.\n",
+    "- [ ] Verified that the pull request link is correctly formatted and accessible via a private browser session.\n",
+    "\n",
+    "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via Slack or email. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges.\n"
    ]
   }
  ],
