--- a/05_instructors/lesson_slides/additional_lecture_slides/6.10_unsupervised_learning_slides.md
+++ b/05_instructors/lesson_slides/additional_lecture_slides/6.10_unsupervised_learning_slides.md
@@ -145,7 +145,7 @@ The three dimensional data set with the first and second principal components de
 
 We can continue to create the principal components by taking the linear combination of the features that maximizes variance while remaining uncorrelated with the previous components.
 
--   To make low-dimensional visualisations we can plot the scores for two principal components at a time.
+-   To make low-dimensional visualizations we can plot the scores for two principal components at a time.
 -   Plot $Z_1$ against $Z_2$, $Z_1$ against $Z_3$, $Z_2$ against $Z_3$, and so on.
 -   On the same plot we can plot the loading vectors on a different axis for each feature.
 -   A plot with both the scores and loading vectors is called a biplot.
