--- a/06_additional_resources/02_assignments/extra_assignment.ipynb
+++ b/06_additional_resources/02_assignments/extra_assignment.ipynb
@@ -13,15 +13,7 @@
    "id": "784f307d-c76d-4cf9-95fc-76fc8008754e",
    "metadata": {},
    "source": [
-    "This assignment is due on __Saturday March 23, by 11:59PM__. It pertains to content taught in classes 3-4-5.\n",
-    "\n",
-    "This assignment should be completed in Python, and a PDF file should be submitted, containing both code and written answers. If you like, you may create your own Jupyter Notebook file from scratch, but it is likely easier to modify this one.\n",
-    "\n",
-    "As before, questions that require identification and/or interpretation will not penalized for brevity of response: if a question can be answered with 'yes/no', or a numeric value, you may simply state as much. If you incorporate code from the internet (which is not required and generally not advisable), please cite the source within your code (providing a URL is sufficient).\n",
-    "\n",
-    "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked at the top of your PDF. Separate submissions are required.\n",
-    "\n",
-    "Any questions can be addressed to Kamilah ([kamilah.ebrahim@mail.utoronto.ca]()) and/or Ananya ([ananya.jha@mail.utoronto.ca]()) and/or Vishnou ([vishnouvina@cs.toronto.edu]()) before the due-date. Please submit your assignments through your Drive Folder."
+    "As before, questions that require identification and/or interpretation will not penalized for brevity of response: if a question can be answered with 'yes/no', or a numeric value, you may simply state as much. If you incorporate code from the internet (which is not required and generally not advisable), please cite the source within your code (providing a URL is sufficient)."
    ]
   },
   {
@@ -724,6 +716,37 @@
     "_(iv)_ Based on the ANOVA results, can we reject the null hypothesis?  \n",
     "\n",
     "_(v)_ Based on the ANOVA results, which model do we say is best?  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3c7d21c",
+   "metadata": {},
+   "source": [
+    "## Submission Information\n",
+    "\n",
+    "Please review our [Assignment Submission Guide](https://github.com/UofT-DSI/onboarding/blob/main/onboarding_documents/submissions.md) for detailed instructions on how to format, branch, and submit your work. Following these guidelines is crucial for your submissions to be evaluated correctly.\n",
+    "\n",
+    "### Note:\n",
+    "\n",
+    "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked with in your pull request by tagging their GitHub username. Separate submissions are required.\n",
+    "\n",
+    "\n",
+    "### Submission Parameters:\n",
+    "* Submission Due Date: `11:59 PM - 23/03/2024`\n",
+    "* The branch name for your repo should be: `assignment-extra`\n",
+    "* What to submit for this assignment:\n",
+    "    * This Jupyter Notebook (extra_assignment.ipynb) should be populated and should be the only change in your pull request.\n",
+    "* How the pull request link should look like for this assignment: `https://github.com/<your_github_username>/applied_statistical_concepts/pull/<pr_id>`\n",
+    "    * Please verify that this link format is correctly implemented and accessible in a private browser session. This ensures that the technical facilitator and learning support staff can access your submission without any issues.\n",
+    "\n",
+    "Checklist:\n",
+    "- [ ] Created a branch with the correct naming convention.\n",
+    "- [ ] Ensured that the repository is public.\n",
+    "- [ ] Reviewed the PR description guidelines and adhered to them.\n",
+    "- [ ] Verified that the pull request link is correctly formatted and accessible via a private browser session.\n",
+    "\n",
+    "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via Slack or email. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges."
    ]
   }
  ],
