--- a/06_additional_resources/02_assignments/extra_assignment.ipynb
+++ b/06_additional_resources/02_assignments/extra_assignment.ipynb
@@ -725,7 +725,7 @@
    "source": [
     "## Submission Information\n",
     "\n",
-    "Please review our [Assignment Submission Guide](https://github.com/UofT-DSI/onboarding/blob/main/onboarding_documents/submissions.md) for detailed instructions on how to format, branch, and submit your work. Following these guidelines is crucial for your submissions to be evaluated correctly.\n",
+    "🚨**Please review our [Assignment Submission Guide](https://github.com/UofT-DSI/onboarding/blob/main/onboarding_documents/submissions.md)**🚨 for detailed instructions on how to format, branch, and submit your work. Following these guidelines is crucial for your submissions to be evaluated correctly.\n",
     "\n",
     "### Note:\n",
     "\n",
@@ -737,16 +737,16 @@
     "* The branch name for your repo should be: `assignment-extra`\n",
     "* What to submit for this assignment:\n",
     "    * This Jupyter Notebook (extra_assignment.ipynb) should be populated and should be the only change in your pull request.\n",
-    "* How the pull request link should look like for this assignment: `https://github.com/<your_github_username>/applied_statistical_concepts/pull/<pr_id>`\n",
-    "    * Please verify that this link format is correctly implemented and accessible in a private browser session. This ensures that the technical facilitator and learning support staff can access your submission without any issues.\n",
+    "* What the pull request link should look like for this assignment: `https://github.com/<your_github_username>/applied_statistical_concepts/pull/<pr_id>`\n",
+    "    * Open a private window in your browser. Copy and paste the link to your pull request into the address bar. Make sure you can see your pull request properly. This helps the technical facilitator and learning support staff review your submission easily.\n",
     "\n",
     "Checklist:\n",
     "- [ ] Created a branch with the correct naming convention.\n",
     "- [ ] Ensured that the repository is public.\n",
     "- [ ] Reviewed the PR description guidelines and adhered to them.\n",
-    "- [ ] Verified that the pull request link is correctly formatted and accessible via a private browser session.\n",
+    "- [ ] Verify that the link is accessible in a private browser window.\n",
     "\n",
-    "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via Slack or email. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges."
+    "If you encounter any difficulties or have questions, please don't hesitate to reach out to our team via our Slack at `#cohort-3-help`. Our Technical Facilitators and Learning Support staff are here to help you navigate any challenges."
    ]
   }
  ],
