--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -13,11 +13,11 @@
    "id": "5fce0350-2a17-4e93-8d4c-0b8748fdfc32",
    "metadata": {},
    "source": [
-    "As before, questions that require identification and/or interpretation will not penalized for brevity of response: if a question can be answered with 'yes/no', or a numeric value, you may simply state as much. If you incorporate code from the internet (which is not required and generally not advisable), please cite the source within your code (providing a URL is sufficient).\n",
+    "As before, if a question can be answered with 'yes/no', or a numeric value, you may simply state as much. If you incorporate code from the internet (which is not required and generally not advisable), please cite the source within your code (providing a URL is sufficient).\n",
     "\n",
     "We will go through comparable code and concepts in class. If you run into trouble, start by using the help `help()` function in Python, to get information about the datasets and function in question. The internet is also a great resource when coding (though note that no outside searches are required by the assignment!). If you do incorporate code from the internet, please cite the source within your code (providing a URL is sufficient).\n",
     "\n",
-    "Please bring questions that you cannot work out on your own to tutorial. We will work with you through the issue.\n",
+    "Please bring questions that you cannot work out on your own to office hours, work periods or share with your peers on Slack. We will work with you through the issue.\n",
     "\n",
     "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked with in your pull request by tagging their GitHub username. Separate submissions are required."
    ]
@@ -273,7 +273,7 @@
    "source": [
     "# Criteria\n",
     "\n",
-    "|Criteria            |Pass           |Fail          |\n",
+    "|Criteria            |Complete           |Incomplete          |\n",
     "|--------------------|---------------|--------------|\n",
     "|Classification using KNN|All steps are done correctly and the answers are correct.|At least one step is done incorrectly leading to a wrong answer.|"
    ]
