--- a/02_assignments/assignment_2.ipynb
+++ b/02_assignments/assignment_2.ipynb
@@ -19,7 +19,7 @@
     "\n",
     "Please bring questions that you cannot work out on your own to office hours, work periods or share with your peers on Slack. We will work with you through the issue.\n",
     "\n",
-    "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked with in your pull request by tagging their GitHub username. Separate submissions are required."
+    "If you like, you may collaborate with others in the cohort. If you choose to do so, please indicate with whom you have worked with in your pull request by tagging their GitHub username. Separate submissions are required."
    ]
   },
   {
