--- a/02_assignments/assignment_3.ipynb
+++ b/02_assignments/assignment_3.ipynb
@@ -270,7 +270,7 @@
     "\n",
     "### Note:\n",
     "\n",
-    "If you like, you may collaborate with others in the class. If you choose to do so, please indicate with whom you have worked with in your pull request by tagging their GitHub username. Separate submissions are required.\n",
+    "If you like, you may collaborate with others in the cohort. If you choose to do so, please indicate with whom you have worked with in your pull request by tagging their GitHub username. Separate submissions are required.\n",
     "\n",
     "\n",
     "### Submission Parameters:\n",
