Fixing broken notebook syntax.

--- a/03_exercises/3_multiple_linear_regression_exercise.ipynb
+++ b/03_exercises/3_multiple_linear_regression_exercise.ipynb
@@ -161,12 +161,19 @@
     "Here we use the `Boston` data again. \n",
     "\n",
     "We can examine the relationship between `medv` and `chas`, where\n",
-    "\\begin{align*}\n",
+    "<!-- \\begin{align*}\n",
     "\\text{chas} = \\left\\{\\begin{array}{ll}\n",
     "1 & \\text { if } \\text{tract bounds Charles River} \\\\\n",
     "0 & \\text { if } \\text{not}\n",
     "\\end{array}\\right. \n",
-    "\\end{align*}"
+    "\\end{align*} -->\n",
+    "\n",
+    "\\begin{align*}\n",
+    "\\text{chas} = \\left\\{\\begin{array}{ll}\n",
+    "1 & \\text { if tract bounds Charles River} \\\\\n",
+    "0 & \\text { if not}\n",
+    "\\end{array}\\right\\}\n",
+    "\\end{align*}\n"
    ]
   },
   {
@@ -322,7 +329,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.9.19"
   },
   "vscode": {
    "interpreter": {
