Small grammatical error fix

--- a/03_exercises/1_introduction_to_asc/exploring_a_dataset_with_regression.ipynb
+++ b/03_exercises/1_introduction_to_asc/exploring_a_dataset_with_regression.ipynb
@@ -357,7 +357,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If we repeat all of the steps above **using different columns**, the following Python cell will randomly select two columns and run logistic regression on them to classify the data. Each time you run the cell, it will select different columns for the classification, and you will observe that the accuracy changes accordingly. This is because different variables have varying degrees of correlation with the target variable, impacting the model's performance.\n",
+    "What if we repeat all of the steps above **using different columns**? The following Python cell will randomly select two columns and run logistic regression on them to classify the data. Each time you run the cell, it will select different columns for the classification, and you will observe that the accuracy changes accordingly. This is because different variables have varying degrees of correlation with the target variable, impacting the model's performance.\n",
     "\n",
     "run `run_it_all_over()` many times..."
    ]
