Changing the notebook title

--- a/03_exercises/1_introduction_to_asc/exploring_a_dataset_with_regression.ipynb
+++ b/03_exercises/1_introduction_to_asc/exploring_a_dataset_with_regression.ipynb
@@ -23,7 +23,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook Title: Breast Cancer Classification with Regression\n",
+    "# Notebook Title: Exploring a Dataset with Regression\n",
     "\n",
     "## Introduction\n",
     "Welcome to Exercise 1! In this notebook, we will go through the importance of applying statistical concepts to our data problems and how to get meaningful answers to our questions using the power of programming. This module will help you understand many things about your data.\n",
