Updating the "note" message of the exercise.

--- a/03_exercises/1_exploring_a_dataset_with_regression.ipynb
+++ b/03_exercises/1_exploring_a_dataset_with_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "🚨 YOU DO NOT NEED TO UNDERSTAND THE CODE WRITTEN IN THE CELL BELOW 🚨"
+    "🚨 Don't worry if the code block below doesn't make sense, please scroll down to the instructions below  🚨"
    ]
   },
   {
