--- a/03_exercises/1_exploring_a_dataset_with_regression.ipynb
+++ b/03_exercises/1_exploring_a_dataset_with_regression.ipynb
@@ -296,7 +296,7 @@
     "plt.title('Distribution of Target Classes')\n",
     "plt.xlabel('Target')\n",
     "plt.ylabel('Count')\n",
-    "plt.xticks(ticks=[0, 1], labels=breast_cancer.target_names)\n",
+    "plt.xticks(ticks=[1, 0], labels=breast_cancer.target_names)\n",
     "plt.show()"
    ]
   },
@@ -542,7 +542,7 @@
     "    y={'data': [malignant_data[0], malignant_data[1]], 'color': 'red', 'label': 'Malignant'}, \n",
     "    line_plot={'x': x_values, 'y': y_values, 'color': 'blue', 'linestyle': '--'},\n",
     "    title=\"mean texture vs mean radius\", \n",
-    "    show_legend=False\n",
+    "    show_legend=True\n",
     ")"
    ]
   },
@@ -611,66 +611,10 @@
     "print(f\"The graph plots \\\"{breast_cancer.feature_names[new_feature1_index]}\\\" on the x-axis and \\\"{breast_cancer.feature_names[feature2_index]}\\\" on the y-axis.\\n\"\n",
     "    f\"\\t\\\"{breast_cancer.feature_names[new_feature1_index]}\\\": {feature_descriptions[new_feature1_base]} (x-axis)\\n\"\n",
     "    f\"\\t\\\"{breast_cancer.feature_names[new_feature2_index]}\\\": {feature_descriptions[new_feature2_base]} (y-axis).\\n\\n\"\n",
-    "    \"The yellow points 🟢 represent \\\"benign tumors\\\", and the purple points 🔴 represent \\\"malignant tumors\\\".\\n\"\n",
-    "    \"The red dashed line represents the decision boundary determined by the logistic regression model.\\n\\n\" # explain what a decision boundary is better\n",
+    "    \"The green points 🟢 represent \\\"benign tumors\\\", and the red points 🔴 represent \\\"malignant tumors\\\".\\n\"\n",
+    "    \"The blue dashed line represents the decision boundary determined by the logistic regression model.\\n\\n\" # explain what a decision boundary is better\n",
     "    \"Each run of this script might result in different features being selected, hence different visualizations and boundaries.\\n\")\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Circling back to the real-world application of our work, this model has the potential to save lives. By using past data to train the model, we can now quickly and accurately classify new patients as having benign or malignant tumors based on their data. This means that if a new patient's data falls on one side of the decision boundary, with the accuracy of the model in mind, we can quickly determine their diagnosis and take appropriate action. This ability to rapidly and accurately diagnose breast cancer can lead to earlier interventions, better treatment plans, and ultimately, improved patient outcomes.\n",
-    "\n",
-    "run the cell below many times..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# how it will look like in real life...\n",
-    "\n",
-    "# Randomly select two features to visualize\n",
-    "real_life_feature_indices = random.sample(range(X.shape[1]), 2)\n",
-    "real_life_feature1_index = real_life_feature_indices[0]\n",
-    "real_life_feature2_index = real_life_feature_indices[1]\n",
-    "\n",
-    "# Split the data into training and testing sets\n",
-    "real_life_X_train, real_life_X_test, real_life_y_train, real_life_y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-    "\n",
-    "# Initialize and train the logistic regression model\n",
-    "real_life_model = LogisticRegression(max_iter=10000)\n",
-    "real_life_model.fit(real_life_X_train[:, real_life_feature_indices], real_life_y_train)  # Fit model only on selected features\n",
-    "\n",
-    "# Predict on the test set using the same features\n",
-    "real_life_y_pred = real_life_model.predict(real_life_X_test[:, real_life_feature_indices])\n",
-    "\n",
-    "# Calculate the accuracy\n",
-    "accuracy = accuracy_score(real_life_y_test, real_life_y_pred)\n",
-    "print(\"Accuracy:\", accuracy)\n",
-    "\n",
-    "# Line Plot Coordinates\n",
-    "real_life_x_values = np.linspace(real_life_X_test[:, real_life_feature1_index].min(), real_life_X_test[:, real_life_feature1_index].max(), 100)\n",
-    "real_life_y_values = -(real_life_model.intercept_ + real_life_model.coef_[0][0] * real_life_x_values) / real_life_model.coef_[0][1]\n",
-    "\n",
-    "# Defining benign data and malignant data\n",
-    "real_life_benign_data = [real_life_X_test[real_life_y_test == 0][:, real_life_feature1_index], real_life_X_test[real_life_y_test == 0][:, real_life_feature2_index], breast_cancer.target_names[0]]\n",
-    "real_life_malignant_data = [real_life_X_test[real_life_y_test == 1][:, real_life_feature1_index], real_life_X_test[real_life_y_test == 1][:, real_life_feature2_index], breast_cancer.target_names[1]]\n",
-    "\n",
-    "# Plotting the data points and the decision boundary using scatter_plot\n",
-    "scatter_plot(\n",
-    "    X={'data': [real_life_benign_data[0], real_life_benign_data[1]], 'color': 'blue', 'label': breast_cancer.target_names[0]}, \n",
-    "    y={'data': [real_life_malignant_data[0], real_life_malignant_data[1]], 'color': 'blue', 'label': breast_cancer.target_names[1]}, \n",
-    "    line_plot={'x': real_life_x_values, 'y': real_life_y_values, 'color': 'blue', 'linestyle': '--', 'fill_colors': ['green', 'red'], 'model': real_life_model},\n",
-    "    title=f'{breast_cancer.feature_names[real_life_feature2_index]} vs {breast_cancer.feature_names[real_life_feature1_index]}', \n",
-    "    show_legend=False,\n",
-    "    xlabel=breast_cancer.feature_names[real_life_feature1_index],\n",
-    "    ylabel=breast_cancer.feature_names[real_life_feature2_index]\n",
-    ")"
    ]
   },
   {
@@ -687,13 +631,20 @@
     "\n",
     "As we continue to learn and apply these advanced techniques, we can build more accurate and reliable models, ultimately leading to better predictions and more informed decisions in various fields, including healthcare, finance, and beyond.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "dsi_participant",
+   "display_name": "dsi",
    "language": "python",
-   "name": "python3"
+   "name": "dsi"
   },
   "language_info": {
    "codemirror_mode": {
@@ -705,9 +656,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
